--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.31"
+dict = "0.1.5"
+hashmap = "0.0.1"
 mysql = "24.0.0"
 pulldown-cmark = "0.9.3"
 tera = "1.19.1"
