--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,9 @@ dict = "0.1.5"
 hashmap = "0.0.1"
 mysql = "24.0.0"
 pulldown-cmark = "0.9.3"
+queue = "0.3.1"
+stack = "0.4.0"
 tera = "1.19.1"
+vec = "0.0.0"
+voca_rs = "1.15.2"
 yaml-rust = "0.4.5"
