--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.31"
 dict = "0.1.5"
+gray_matter = "0.2.6"
+grey = "0.1.1"
 hashmap = "0.0.1"
+markdown = "0.3.0"
 mysql = "24.0.0"
 pulldown-cmark = "0.9.3"
 queue = "0.3.1"
