upgraded markdown package, add a new function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ dict = "0.1.5"
 gray_matter = "0.2.6"
 grey = "0.1.1"
 hashmap = "0.0.1"
-markdown = "0.3.0"
+markdown = "1.0.0-alpha.14"
 mysql = "24.0.0"
 pulldown-cmark = "0.9.3"
 queue = "0.3.1"
