--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ markdown = "1.0.0-alpha.14"
 mysql = "24.0.0"
 pulldown-cmark = "0.9.3"
 queue = "0.3.1"
+serde = "1.0.190"
 stack = "0.4.0"
 tera = "1.19.1"
 vec = "0.0.0"
