--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.31"
+clap = { version = "4.4.8", features = ["derive"] }
 dict = "0.1.5"
 gray_matter = "0.2.6"
 grey = "0.1.1"
